--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,17 +1,13 @@
-@font-face{
-	font-family: 'AvenirNextCyr';
-	src: url('../fonts/AvenirNextCyr-Regular.eot');
-	src: url('../fonts/AvenirNextCyr-Regular.eot?iefix') format('eot'),
-	url('../fonts/AvenirNextCyr-Regular.woff') format('woff'),
-	url('../fonts/AvenirNextCyr-Regular.ttf') format('truetype'),
-	url('../fonts/AvenirNextCyr-Regular.svg#AvenirNextCyr') format('svg');
-	font-weight: normal;
-	font-style: normal;	
-	}
+@import url("../fonts/font/stylesheet.css");
 
 html {
-	font-family: 'AvenirNextCyr';
 	scroll-behavior: smooth;
+}
+
+body {
+	font-family: 'Avenir Next Cyr' !important;
+	font-weight: bold !important;
+	font-style: normal !important;
 }
 
 .block {
@@ -251,8 +247,6 @@ html {
 		background-size: contain;
 		background-repeat: no-repeat;
 		background-position: center;
-		margin: 0 -18vh;
-		padding:  0 18vh;
 	}
 	&__person {
 		margin: 50px;
